log
Thu May  5 11:31:37 HSP 2022: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
8d2b152
Thu May  5 11:32:22 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:47:4: error: 'return' with no value, in function returning non-void [-Werror]
    return;
    ^~~~~~
heap.c:40:7: note: declared here
 Heap* createHeap(){
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9591ddd
Thu May  5 11:33:02 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
28c0558
Thu May  5 11:35:41 HSP 2022: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
72bff87
Thu May  5 11:37:53 HSP 2022: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
8dbf7fd
Thu May  5 11:52:28 HSP 2022: 
 heap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
b7e2d4d
Thu May  5 12:05:44 HSP 2022: 
 heap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  4|1
total_score: 50/70
69de0e2
